<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_fazio"
            android:textSize="24sp"
            android:id="@+id/about_fazio"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_header"
                android:id="@+id/about_contact_header"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_email"
                android:id="@+id/about_contact_email"
                android:layout_gravity="center_horizontal"
                android:onClick="goToEmail"
                android:clickable="true"
                android:textColorLink="@color/link_colors"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_twitter"
                android:id="@+id/about_contact_twitter"
                android:layout_gravity="center_horizontal"
                android:onClick="goToTwitter"
                android:clickable="true"
                android:textColorLink="@color/link_colors"
                android:textSize="18sp"/>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_attribution"
            android:id="@+id/about_logo"
            android:textColorLink="@color/link_colors"
            android:clickable="true"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_ncaa"
            android:id="@+id/about_ncaa"/>

    </LinearLayout>
</ScrollView>